--- a/aii.html
+++ b/aii.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Scale AI WEBPAGE</title>
+    <title>SCALE USING AI WEBPAGE USING HTML</title>
     <link rel="stylesheet" href="cl.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -57,5 +57,6 @@
     </main>
 </body>
 </html>
+
 
 
