--- a/aii.html
+++ b/aii.html
@@ -30,7 +30,7 @@
                 <img src="https://th.bing.com/th/id/OIP.YcKm_OHpUNOLV38DGGpJTAHaGL?rs=1&pid=ImgDetMain" alt="Users">
                 <p>10k+ Active users</p>
             </div>
-            <p class="description">AI enhances decision-making by the analyzing vast amounts of data quickly and accurately,  and identifying patterns and insights that might be missed by humans.  </p>
+            <p class="description">AI enhances decision-making by the analyzing vast amounts of data quickly and accurately,  and identifying patterns and insights that might be missed by humans.and helped the user to get data through many sources  </p>
             <div class="features">
                 <div class="feature">100+ <span>Cool Features</span></div>
                 <div class="feature">10k+ <span>Active Users</span></div>
@@ -57,6 +57,7 @@
     </main>
 </body>
 </html>
+
 
 
 
