Modify title and enhance active users description
Updated the title and added context to the active users description.

--- a/aii.html
+++ b/aii.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SCALE AI </title>
+    <title>SCALE AI WEBPAGE </title>
     <link rel="stylesheet" href="cl.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Our Features</a></li>
-                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Pricing </a></li>
                 <li><a href="#">Our Story</a></li>
                 <li><a href="#">Community</a></li>
             </ul>
@@ -28,7 +28,7 @@
             <h1> <I>Life Is Better</I><br> <I> With AI  </I></h1>
             <div class="active-users">
                 <img src="https://th.bing.com/th/id/OIP.YcKm_OHpUNOLV38DGGpJTAHaGL?rs=1&pid=ImgDetMain" alt="Users">
-                <p>10k+ Active users</p>
+                <p>10k+ Active users in SCALE AI</p>
             </div>
             <p class="description">AI enhances decision-making by the analyzing vast amounts of data quickly and accurately,  and identifying patterns and insights that might be missed by humans.and helped the user to get data through many sources  </p>
             <div class="features">
@@ -57,6 +57,7 @@
     </main>
 </body>
 </html>
+
 
 
 
